2008-07-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* testsuite/eunit_tty.erl (escape_desc): Characters '_' and '-' are
	kept in filenames.

2008-07-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/make-schemas-urls-list, c_src/extract-known-from-schemas,
	c_src/xmpp_ns.h.in-local, c_src/xmpp_names.h.in-local,
	c_src/xmpp_attrs.h.in-local, c_src/Makefile.am, Makefile.am: Add Perl
	scripts to automatically fetch XEP schemas and extract namespaces,
	names and attributes and create the known lists used by
	exmpp_xml_expat.

	* c_src/extract-known-from-schemas: Fix the known namespaces list
	layout.

	* c_src/xmpp_ns.h.in, c_src/xmpp_attrs.h.in, c_src/xmpp_names.h.in:
	Update known lists using the new scripts.

	* c_src/Makefile.am: Distribute the new scripts and local known lists.
	Split the lines containing Vim modelines so that they are not
	interpreted when editing this Makefile.am.

2008-07-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stringprep.erl: Improved exception handling. An
	exception is raised when exmpp isn't started. When a string isn't
	valid, a meaningful exception is raised. Update documentation.

	* src/core/exmpp_jid.erl: Handle exceptions from exmpp_stringprep
	correctly; this was left broken.

	* testsuite/jid.erl: Update testsuite.

	* src/core/exmpp_xml.erl (xmlel_to_xmlement/3, node_to_list/3): It's
	now possible to specify a list of equivalent namespaces in the default
	namespace stack. This is useful for stanzas going from and to
	compatible but different namespaces such as 'jabber:client',
	'jabber:server' and 'jabber:component:accept'. In this example,
	'Default_NS' will be set to [[?NS_JABBER_CLIENT, ?NS_JABBER_SERVER,
	?NS_COMPONENT_ACCEPT], ...].

	* include/exmpp.hrl: Add Jabber Component Protocol namespaces macros.

	* src/core/exmpp_stanza.erl (to_list/2, to_list/3): Add a note about
	equivalent namespaces in exmpp_xml:xmlel_to_xmlelemen/3. Add Server