@@ -3,6 +3,8 @@
 	* testsuite/eunit_tty.erl (escape_desc): Characters '_' and '-' are
 	kept in filenames.
 
+	* testsuite/xml_parser.erl: Convert XML parser test to EUnit.
+
 2008-07-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* c_src/make-schemas-urls-list, c_src/extract-known-from-schemas,
